--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout branch
+        uses: actions/checkout@v4
+
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -20,19 +22,14 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+
       - name: Build with Gradle
         run: ./gradlew build
-      - name: Cache
-        uses: actions/cache@v4.0.2
+
+      - name: Upload Build artifact
+        uses: actions/upload-artifact@v3.2.1-node20
         with:
-          # A list of files, directories, and wildcard patterns to cache and restore
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          # An explicit key for restoring and saving the cache
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          # An ordered list of keys to use for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case.
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+          name: BatePonto.apk
+          path: app/release/app-release.apk
