--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,12 +24,14 @@ jobs:
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
+        with:
+          cache-overwrite-existing: true
 
       - name: Build with Gradle
         run: ./gradlew build
 
       - name: Upload Build artifact
-        uses: actions/upload-artifact@v3.2.1-node20
+        uses: actions/upload-artifact@v4
         with:
           name: BatePonto.apk
-          path: app/release/app-release.apk
+          path: app/build/outputs/apk/app-debug.apk
