--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,12 +1,13 @@
-name: Unit Tests
+name: Lint
 
 on:
-  workflow_dispatch:
   workflow_call:
+  workflow_dispatch:
+  push:
 
 jobs:
-  unit_test:
-
+  lint:
+    name: Linting debug
     runs-on: ubuntu-latest
 
     steps:
@@ -23,5 +24,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
 
-      - name: Unit Tests
-        run: ./gradlew testDebugUnitTest
+      - name: Run LintDebug
+        uses: ./gradlew lintDebug
