--- a/.github/workflows/instrumented_test.yml
+++ b/.github/workflows/instrumented_test.yml
@@ -44,4 +44,4 @@ jobs:
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Run Instrumented Tests on Firebase Test Lab
-        run: gcloud firebase test android run --type instrumentation --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk --device model=Pixel5,version=30,locale=pl,orientation=portrait
+        run: gcloud firebase test android run --type instrumentation --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk --device model='Pixel 5',version=30,locale=pl,orientation=portrait
