--- a/.github/workflows/instrumented_test.yml
+++ b/.github/workflows/instrumented_test.yml
@@ -1,6 +1,7 @@
 name: Android Instrumented Tests
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - master
@@ -33,7 +34,7 @@ jobs:
       - name: Authenticate Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.FIREBASE_CREDENTIAL_FILE_CONTENT }}'
+          credentials_json: ${{ secrets.FIREBASE_CREDENTIAL_FILE_CONTENT }}
 
       - name: Login to Google Cloud
         uses: google-github-actions/setup-gcloud@v2
