#2 continuacao widget e ajustes

--- a/feature/widget/src/main/AndroidManifest.xml
+++ b/feature/widget/src/main/AndroidManifest.xml
@@ -3,14 +3,26 @@
 
     <application>
         <receiver
-            android:name="MarkerReceiver"
-            android:exported="true">
+            android:name=".MarkerReceiverSmall"
+            android:exported="true"
+            android:label="@string/label_widget_small">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/marker_widget_info" />
+                android:resource="@xml/marker_widget_info_small" />
+        </receiver>
+        <receiver
+            android:name=".MarkerReceiverMedium"
+            android:exported="true"
+            android:label="@string/label_widget_medium">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/marker_widget_info_medium" />
         </receiver>
     </application>
 </manifest>
